--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,30 +31,50 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/London
 
-
-          #################################################
-          # 1) 语言统计（Languages）
-          #################################################
+          # 1) Languages (indepth)
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: BreCaspian
+          filename: github-metrics/languages.indepth.svg
+          base: ""
           plugin_languages: yes
-          plugin_languages_sections: most-used  # 只显示“常用语言”
-          plugin_languages_limit: 12            # 最多展示 12 种
+          plugin_languages_sections: most-used, recently-used
           plugin_languages_details: lines, bytes
-          plugin_languages_recent_days: 14      # 近期活跃统计窗口
-          plugin_languages_recent_load: 500     # 扫描最近多少提交
-          plugin_languages_threshold: 0%        # 小语言也显示
+          plugin_languages_limit: 12
+          config_timezone: Europe/London
 
-          #################################################
-          # 2) Issues & PRs（Overall issues and pull requests）
-          #################################################
+      # 2) Issues & PRs (followup indepth)
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: BreCaspian
+          filename: github-metrics/followup.indepth.svg
+          base: ""
           plugin_followup: yes
-          plugin_followup_indepth: yes          # 展示 opened/closed/merged 等详细条
-          plugin_followup_sections: repositories # “On <你的名字>'s repositories”
+          plugin_followup_indepth: yes
+          config_timezone: Europe/London
 
-          #################################################
-          # 3) Coding habits + charts（最近写代码习惯）
-          #################################################
+      # 3) Featured repositories (pinned)
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: BreCaspian
+          filename: github-metrics/repositories.pinned.svg
+          base: ""
+          plugin_repositories: yes
+          plugin_repositories_pinned: 6   # 想展示几个就改这里
+          config_timezone: Europe/London
+
+      # 4) Coding habits + charts
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: BreCaspian
+          filename: github-metrics/habits.charts.svg
+          base: ""
           plugin_habits: yes
-          plugin_habits_charts: yes             # 打开两个小图（小时/星期）
-          plugin_habits_days: 14                # 统计最近 14 天
-          plugin_habits_from: 200               # 最多读取 200 条事件
-          plugin_habits_facts: no               # 不要“有趣事实”小句子
+          plugin_habits_charts: yes
+          plugin_habits_days: 14
+          plugin_habits_from: 200
+          config_timezone: Europe/London
