--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -39,7 +39,7 @@ jobs:
           filename: github-metrics/languages.indepth.svg
           base: ""
           plugin_languages: yes
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used
           plugin_languages_details: lines, bytes
           plugin_languages_limit: 12
           config_timezone: Europe/London
