--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -74,7 +74,7 @@ jobs:
           filename: github-metrics/habits.charts.svg
           base: ""
           plugin_habits: yes
-          plugin_habits_charts: no
+          plugin_habits_charts: yes
           plugin_habits_days: 14
           plugin_habits_from: 200
           config_timezone: Europe/London
