--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -43,6 +43,7 @@ jobs:
           plugin_languages_details: lines, bytes
           plugin_languages_limit: 12
           config_timezone: Europe/London
+          config_border: no
 
       # 2) Issues & PRs (followup indepth)
       - uses: lowlighter/metrics@latest
@@ -54,6 +55,7 @@ jobs:
           plugin_followup: yes
           plugin_followup_indepth: yes
           config_timezone: Europe/London
+          config_border: no
 
       # 3) Featured repositories (pinned)
       - uses: lowlighter/metrics@latest
@@ -65,6 +67,7 @@ jobs:
           plugin_repositories: yes
           plugin_repositories_pinned: 2   # 想展示几个就改这里
           config_timezone: Europe/London
+          config_border: no
 
       # 4) Coding habits + charts
       - uses: lowlighter/metrics@latest
@@ -78,6 +81,7 @@ jobs:
           plugin_habits_days: 14
           plugin_habits_from: 200
           config_timezone: Europe/London
+          config_border: no
 
 
       # 5) Reactions（最近评论/讨论表情）
@@ -92,3 +96,4 @@ jobs:
           plugin_reactions: yes
           plugin_reactions_limit: 200
           plugin_reactions_details: percentage
+          config_border: no
