--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -44,6 +44,14 @@ jobs:
           plugin_languages_limit: 12
           config_timezone: Europe/London
           config_border: no
+          config_background: 0d1117
+          config_css: |
+            :root{
+              --color-border-default: transparent;
+              --color-border-muted: transparent;
+            }
+            rect{ stroke: none !important; }
+          
 
       # 2) Issues & PRs (followup indepth)
       - uses: lowlighter/metrics@latest
@@ -68,21 +76,6 @@ jobs:
           plugin_repositories_pinned: 2   # 想展示几个就改这里
           config_timezone: Europe/London
           config_border: no
-
-      # 4) Coding habits + charts
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: BreCaspian
-          filename: github-metrics/habits.charts.svg
-          base: ""
-          plugin_habits: no
-          plugin_habits_charts: no
-          plugin_habits_days: 14
-          plugin_habits_from: 200
-          config_timezone: Europe/London
-          config_border: no
-
 
       # 5) Reactions（最近评论/讨论表情）
       - uses: lowlighter/metrics@latest
